--- a/WorldNik/WorldNik.vcxproj.filters
+++ b/WorldNik/WorldNik.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="BackgroundThreads.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Initialize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ReadMe.txt" />
@@ -84,5 +87,10 @@
     <CustomBuild Include="Variables.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Initialize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
